fix: navbar overflow

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -78,6 +78,7 @@
     align-items: initial;
     text-align: center;
     position: absolute;
+    // height: 12vh;
     top: 0;
     z-index: 1;
     padding: 0;
@@ -85,6 +86,7 @@
 
   .logoAndButton {
     height: 12vh;
+    overflow: hidden;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -93,6 +95,7 @@
   }
 
   .logoImg {
+    position: initial;
     width: 15vh;
   }
   .toggleButton {
@@ -104,6 +107,8 @@
   }
 
   .burgerLinks {
+    position: absolute;
+    top: 12vh;
     display: flex;
     gap: 0px;
     font-size: 16px;
